# c4-model

./: .cookiecutter.yaml  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
c4_model/: __init__.py  code_element.py  component.py  container.py  definition.py  manager.py  person.py  relation_ship.py  software_system.py  util.py
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: .buildinfo  api.html  changelog.html  code_of_conduct.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.md  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/c4_model/: code_element.html  component.html  container.html  definition.html  manager.html  person.html  relation_ship.html  software_system.html
docs/_sources/: index.rst.txt
example/: example.py
license/: index.html
reference/: index.html
search/: search_index.json
site/: index.html  objects.inv
site/contributing/: index.html
site/license/: index.html
sphinx/: api.rst  conf.py
tests/: test_c4.py  test_manager.py  test_version.py
